--- a/recipes/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/recipes/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,5 +1,5 @@
 <a href="#" class="list-group-item clearfix" (click)="onSelected()">
-    <div class="col-md-8 pull-left">
+    <div class="col-md-8 pull-right">
         <h4 class="list-group-item-heading">
         {{ recipe.name }}
         </h4>
@@ -7,9 +7,9 @@
         {{ recipe.description }}
         </p>
     </div>
-    <span class="col-md-4 pull-right">
+    <span class="col-md-4 pull-left">
         <img [src]="recipe.imagePath" 
         alt="{{ recipe.name }}" 
-        class="img-responsive" style="max-height: 100px; align-content: right;">
+        class="img-responsive" style="max-height: 100px; margin-left: auto; margin-right: auto;">
     </span>
 </a>
