--- a/recipes/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/recipes/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,14 +1,18 @@
-<div class="row">
+<!-- <div class="row">
     <div class="col-xs-12">
         <button class="btn btn-success">
             New Recipe
         </button>
     </div>
 </div>
-<hr>
+<hr> -->
 <div class="row">
     <div class="col-xs-12">        
-        <app-recipe-item *ngFor="let recipeEl of recipes" [recipe]="recipeEl" (recipeSelected)="onRecipeSelected(recipeEl)" style="padding: 3px;"></app-recipe-item>
+        <app-recipe-item 
+        *ngFor="let recipeEl of recipes" 
+        [recipe]="recipeEl"  
+        style="margin: 2px;">
+        </app-recipe-item>
     </div>
 </div>
 
