--- a/recipes/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/recipes/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,4 +1,6 @@
-<a href="#" class="list-group-item clearfix" (click)="onSelected()">
+<a style="cursor: pointer;" 
+    class="list-group-item clearfix" 
+    (click)="onSelected()">
     <div class="col-md-8 pull-right">
         <h4 class="list-group-item-heading">
         {{ recipe.name }}
