--- a/recipes/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/recipes/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,6 +1,7 @@
 <a style="cursor: pointer;" 
-    class="list-group-item clearfix" 
-    (click)="onSelected()">
+    [routerLink]="[index]"   
+    class="list-group-item clearfix">
+    <!-- routerLinkActive="active" -->
     <div class="col-md-8 pull-right">
         <h4 class="list-group-item-heading">
         {{ recipe.name }}
