--- a/recipes/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/recipes/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -20,7 +20,16 @@
                      ngModel
                      required
                      [pattern]="'^[1-9]+[0-9]*$'">
-                 </div>
+                </div>
+                <div class="col-sm-3 form-group">
+                    <label for="measureUnit">Unit</label>                   
+                    <select class="custom-select" id="measureUnit">
+                        <option selected>Choose...</option>
+                        <option value="milliliter">ml</option>
+                        <option value="tablespoon">tbs</option>
+                        <option value="piece">pc</option>
+                    </select>
+                </div>
             </div>
             <div class="row">
                 <div class="col-xs-12">
