Add image preview

--- a/recipes/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/recipes/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -21,7 +21,7 @@
                      required
                      [pattern]="'^[1-9]+[0-9]*$'">
                 </div>
-                <div class="col-sm-3 form-group">
+                <!-- <div class="col-sm-3 form-group">
                     <label for="measureUnit">Unit</label>                   
                     <select class="custom-select" id="measureUnit">
                         <option selected>Choose...</option>
@@ -29,7 +29,7 @@
                         <option value="tablespoon">tbs</option>
                         <option value="piece">pc</option>
                     </select>
-                </div>
+                </div> -->
             </div>
             <div class="row">
                 <div class="col-xs-12">
